syntax = "proto3";

package micros.auth.v1;

import "google/protobuf/timestamp.proto";

// ServiceRegistryService provides KYS (Know Your Service) management.
// Services register to get credentials for service-to-service auth.
service ServiceRegistryService {
  // Register a new service.
  rpc RegisterService(RegisterServiceRequest) returns (RegisterServiceResponse);

  // Get a service token for authenticated service calls.
  rpc GetServiceToken(GetServiceTokenRequest) returns (GetServiceTokenResponse);

  // Get service by key.
  rpc GetService(GetServiceRequest) returns (GetServiceResponse);

  // Rotate service secret.
  rpc RotateSecret(RotateSecretRequest) returns (RotateSecretResponse);

  // Get permissions for a service.
  rpc GetServicePermissions(GetServicePermissionsRequest) returns (GetServicePermissionsResponse);

  // Grant permission to a service.
  rpc GrantPermission(GrantPermissionRequest) returns (GrantPermissionResponse);
}

// RegisterServiceRequest for registering a service.
message RegisterServiceRequest {
  // Service key (unique identifier, e.g., "payment-service").
  string svc_key = 1;

  // Service display name.
  string svc_name = 2;

  // Service description.
  optional string description = 3;

  // Optional tenant ID (UUID) to scope service to a tenant.
  optional string tenant_id = 4;
}

// RegisterServiceResponse after registering a service.
message RegisterServiceResponse {
  // The registered service.
  Service service = 1;

  // Client secret (only returned once, store securely).
  string client_secret = 2;
}

// GetServiceTokenRequest for getting a service token.
message GetServiceTokenRequest {
  // Service key.
  string svc_key = 1;

  // Client secret.
  string client_secret = 2;
}

// GetServiceTokenResponse with service token.
message GetServiceTokenResponse {
  // JWT access token.
  string access_token = 1;

  // Token type (always "Bearer").
  string token_type = 2;

  // Expiry in seconds.
  int64 expires_in = 3;
}

// GetServiceRequest for fetching a service.
message GetServiceRequest {
  // Service key.
  string svc_key = 1;
}

// RotateSecretRequest for rotating service secret.
message RotateSecretRequest {
  // Service key.
  string svc_key = 1;

  // Current client secret for verification.
  string current_secret = 2;
}

// RotateSecretResponse with new secret.
message RotateSecretResponse {
  // New client secret.
  string new_secret = 1;

  // Message.
  string message = 2;
}

// GetServicePermissionsRequest for getting service permissions.
message GetServicePermissionsRequest {
  // Service key.
  string svc_key = 1;
}

// GetServicePermissionsResponse with list of permissions.
message GetServicePermissionsResponse {
  repeated string permissions = 1;
}

// GrantPermissionRequest for granting permission to a service.
message GrantPermissionRequest {
  // Service key.
  string svc_key = 1;

  // Permission to grant.
  string permission = 2;
}

// GrantPermissionResponse after granting permission.
message GrantPermissionResponse {
  string message = 1;
}

// Service represents a registered service.
message Service {
  // Service ID (UUID).
  string svc_id = 1;

  // Service key.
  string svc_key = 2;

  // Service name.
  string svc_name = 3;

  // Description.
  optional string description = 4;

  // Whether the service is active.
  bool active = 5;

  // Creation timestamp.
  google.protobuf.Timestamp created_utc = 6;
}

// GetServiceResponse wraps a fetched service.
message GetServiceResponse {
  Service service = 1;
}
